--- a/resources/assets/sass/pages/_privacy-policy.scss
+++ b/resources/assets/sass/pages/_privacy-policy.scss
@@ -28,4 +28,9 @@
         height: 18px;
         margin-bottom: 4px;
     }
+    .scrollbar-container {
+        .mCSB_draggerContainer {
+            right: -50px;
+        }
+    }
 }
